--- a/configuration/partials/account/details-form-fields.hbs
+++ b/configuration/partials/account/details-form-fields.hbs
@@ -4,8 +4,7 @@
       <label class="form-label" for="first_name">First name</label>
     </div>
     <div class="column col-9">
-      <input class="form-input" id="first_name" name="first_name" type="text" value="{{@root.data.accountInfo.first_name}}" placeholder=""
-        data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.first_name}}>
+      <input class="form-input" id="first_name" name="first_name" type="text" value="{{@root.data.accountInfo.first_name}}" placeholder="" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.first_name}}>
     </div>
   </div>
   <div class="form-group">
@@ -13,8 +12,7 @@
       <label class="form-label" for="last_name">Last name</label>
     </div>
     <div class="column col-9">
-      <input class="form-input" id="last_name" name="last_name" type="text" value="{{@root.data.accountInfo.last_name}}" placeholder=""
-        data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.last_name}}>
+      <input class="form-input" id="last_name" name="last_name" type="text" value="{{@root.data.accountInfo.last_name}}" placeholder="" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.last_name}}>
     </div>
   </div>
   <div class="form-group">
@@ -22,16 +20,12 @@
       <label class="form-label" for="date_of_birth">Date of birth</label>
     </div>
     <div class="column col-9">
-      {{#if admin ~}}
-        <input class="form-input" id="date_of_birth" max="{{momentFormat (dateMath 'now-13y') "YYYY-MM-DD" }}" name="date_of_birth" type="date" value="{{@root.data.accountInfo.date_of_birth}}"
-          data-component="TasksTrigger" data-TasksTrigger="focus-next" {{#if @root.data.accountInfo.date_of_birth}}disabled{{else}}{{>form_validation_attributes @root.context.metaData.accountInfoValidation.date_of_birth}}{{/if}}>
+      {{#unless @root.data.accountInfo.date_of_birth ~}}
+        <input class="form-input" id="date_of_birth" max="{{momentFormat (dateMath 'now-13y') 'YYYY-MM-DD'}}" name="date_of_birth" type="date" value="{{@root.data.accountInfo.date_of_birth}}" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.date_of_birth}}>
       {{else}}
-        <input class="form-input" id="date_of_birth_checked" max="{{momentFormat (dateMath 'now-12y') "YYYY-MM-DD" }}" min="{{momentFormat (dateMath 'now-26y') "YYYY-MM-DD" }}"name="date_of_birth" type="date" value="{{@root.data.accountInfo.date_of_birth}}"
-          data-component="TasksTrigger" data-TasksTrigger="focus-next" {{#if @root.data.accountInfo.date_of_birth}}disabled{{else}}{{>form_validation_attributes @root.context.metaData.accountInfoValidation.date_of_birth_checked}}{{/if}}>
-        {{#if @root.data.accountInfo.date_of_birth ~}}
-          <input type="hidden" name="date_of_birth" value="{{@root.data.accountInfo.date_of_birth}}">
-        {{/if ~}}
-      {{/if ~}}
+        <input class="form-input" id="date_of_birth_checked" max="{{momentFormat (dateMath 'now-12y') 'YYYY-MM-DD'}}" min="{{momentFormat (dateMath 'now-26y') 'YYYY-MM-DD'}}" name="date_of_birth_checked" type="date" value="{{@root.data.accountInfo.date_of_birth}}" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" disabled>
+        <input type="hidden" name="date_of_birth" value="{{@root.data.accountInfo.date_of_birth}}">
+      {{/unless ~}}
       {{#if @root.data.accountInfo.date_of_birth ~}}
       <div class="caption">
         If your date of birth is incorrect here please
@@ -57,8 +51,7 @@
         <label class="form-label" for="verification_email">Your parent or guardian's email address</label>
       </div>
       <div class="column col-9">
-        <input class="form-input" id="verification_email" name="verification_email" type="text" value="{{@root.data.accountInfo.verification_email}}" placeholder=""
-          data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.verification_email}}>
+        <input class="form-input" id="verification_email" name="verification_email" type="text" value="{{@root.data.accountInfo.verification_email}}" placeholder="" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.verification_email}}>
       </div>
     </div>
     <div class="form-group">
@@ -66,8 +59,7 @@
         <label class="form-label" for="school_college_name">School/college name</label>
       </div>
       <div class="column col-9">
-        <input class="form-input" id="school_college_name" name="school_college_name" type="text" value="{{@root.data.accountInfo.school_college_name}}" placeholder=""
-          data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.school_college_name}}>
+        <input class="form-input" id="school_college_name" name="school_college_name" type="text" value="{{@root.data.accountInfo.school_college_name}}" placeholder="" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.school_college_name}}>
       </div>
     </div>
   {{else}}
@@ -76,8 +68,7 @@
         <label class="form-label" for="title">Job title</label>
       </div>
       <div class="column col-9">
-        <input class="form-input" id="title" name="title" type="text" value="{{@root.data.accountInfo.title}}" placeholder=""
-          data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.title}}>
+        <input class="form-input" id="title" name="title" type="text" value="{{@root.data.accountInfo.title}}" placeholder="" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.title}}>
       </div>
     </div>
     <div class="form-group">
@@ -85,8 +76,7 @@
         <label class="form-label" for="phone">Phone number</label>
       </div>
       <div class="column col-9">
-        <input class="form-input" id="phone" name="phone" type="text" value="{{@root.data.accountInfo.phone}}" placeholder=""
-          data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.phone}}>
+        <input class="form-input" id="phone" name="phone" type="text" value="{{@root.data.accountInfo.phone}}" placeholder="" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.phone}}>
       </div>
     </div>
     <input type="hidden" name="verification_email" value="anuttgens@gmail.com" />
@@ -98,8 +88,7 @@
       <label class="form-label" for="postcode">{{#if admin}}Work postcode{{else}}Home postcode{{/if}}</label>
     </div>
     <div class="column col-2">
-      <input class="form-input" id="postcode" name="postcode" type="text" value="{{@root.data.accountInfo.postcode}}" placeholder=""
-        data-component="TasksTrigger" data-TasksTrigger="postcode-lookup" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.postcode}}>
+      <input class="form-input" id="postcode" name="postcode" type="text" value="{{@root.data.accountInfo.postcode}}" placeholder="" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="postcode-lookup" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.postcode}}>
     </div>
   </div>
   <input type="hidden" name="local_authority" id="local_authority" value="{{@root.data.accountInfo.local_authority}}" />
