bugfix for volopps refactor

--- a/configuration/partials/volunteering/opportunity/full.hbs
+++ b/configuration/partials/volunteering/opportunity/full.hbs
@@ -1,5 +1,5 @@
 <div class="full">
-  {{> opportunity_key_info type="full"}}
+  {{> volunteering_opportunity_key_info type="full"}}
   <div class="content-primary-info-container tabs">
     <div class="columns">
       <div class="column col-8 action">
@@ -330,7 +330,7 @@
     </div>
 
     <div class="t-margin-full">
-      {{> opportunity_actions slug=slug Id=Id action="organisation"}}
+      {{> volunteering_opportunity_actions slug=slug Id=Id action="organisation"}}
     </div>
   </div>
 </div>
