--- a/configuration/partials/volunteering/opportunity/list.hbs
+++ b/configuration/partials/volunteering/opportunity/list.hbs
@@ -1,5 +1,5 @@
 <div class="card list" data-opportunity-id="{{Id}}" data-opportunity-layout="List" data-opportunity-context="{{default viewContext "Other"}}">
-  {{> opportunity_key_info type="list"}}
-  {{> opportunity_description limit="10.5rem" description=description}}
-  {{> opportunity_actions slug=slug Id=Id}}
+  {{> volunteering_opportunity_key_info type="list"}}
+  {{> volunteering_opportunity_description limit="10.5rem" description=description}}
+  {{> volunteering_opportunity_actions slug=slug Id=Id}}
 </div>
