--- a/configuration/partials/volunteering/opportunity/mini.hbs
+++ b/configuration/partials/volunteering/opportunity/mini.hbs
@@ -1,5 +1,5 @@
 <div class="card mini" data-opportunity-id="{{Id}}" data-opportunity-layout="Mini" data-opportunity-context="{{default viewContext "Other"}}">
-  {{> opportunity_key_info type="mini"}}
-  {{> opportunity_description limit="4.5rem" description=description}}
-  {{> opportunity_actions slug=slug Id=Id}}
+  {{> volunteering_opportunity_key_info type="mini"}}
+  {{> volunteering_opportunity_description limit="4.5rem" description=description}}
+  {{> volunteering_opportunity_actions slug=slug Id=Id}}
 </div>
