--- a/configuration/templates/volunteering/opportunity.hbs
+++ b/configuration/templates/volunteering/opportunity.hbs
@@ -3,7 +3,7 @@
   {{#compare @root.data.primaryResponse.hits.total ">" 0 ~}}
   <div class="content-primary">
     {{#each @root.data.primaryResponse.hits.hits ~}}
-      {{> opportunity_full _source view="full"}}
+      {{> volunteering_opportunity_full _source view="full"}}
     {{/each ~}}
   </div>
 
@@ -16,7 +16,7 @@
       <div class="columns">
         {{#each @root.data.opportunitySupplimentary.related.hits.hits ~}}
         <div class="column col-6">
-          {{> opportunity_list _source hitContext="related-opportunity" parentDocument=_source.Id viewContext="Related"}}
+          {{> volunteering_opportunity_list _source hitContext="related-opportunity" parentDocument=_source.Id viewContext="Related"}}
         </div>
         {{/each ~}}
       </div>
