--- a/configuration/partials/volunteering/opportunity/actions.hbs
+++ b/configuration/partials/volunteering/opportunity/actions.hbs
@@ -1,5 +1,7 @@
 <div class="card-footer">
+  {{#unless (compare action 'organisation') ~}}
   <a href="/search/opportunity/{{Id}}/{{title_slug}}{{> query_search}}" class="btn btn-link">Find out more</a>
+  {{/unless ~}}
   <div class="pull-right">
     <div id="action-chips" class="chip-set">
       {{#if opportunity_contact_email ~}}
