--- a/configuration/templates/account/auth/reset-password.hbs
+++ b/configuration/templates/account/auth/reset-password.hbs
@@ -1,4 +1,4 @@
-<form id="reset-password-form" method="POST" class="authentication-form">
+<form id="reset-password-form" method="POST" class="container form authentication-form">
   <h1 class="x-padding">
     Reset password
   </h1>
