--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -105,7 +105,7 @@
                 </a>
                 <ul class="menu">
                   <li class="menu-item">
-                    <a href="/" class="{{#compare @root.request.url.pathname '/'}} active{{/compare}}{{#if @root.data.accountInfo.verification_needed}} disabled{{/if}}">
+                    <a href="/" class="l-padding-full {{#compare @root.request.url.pathname '/'}} active{{/compare}}{{#if @root.data.accountInfo.verification_needed}} disabled{{/if}}">
                       <span class="far fa-fw fa-home" aria-hidden="true"></span>
                       Home
                     </a>
@@ -123,7 +123,7 @@
                     {{/if ~}}
                   {{/each ~}}
                   <li class="menu-item">
-                    <a href="#" data-component="TasksTrigger" data-TasksTrigger="sign-out">
+                    <a href="/sign-out" class="l-padding-full" data-component="TasksTrigger" data-TasksTrigger="sign-out">
                       <span class="far fa-fw fa-sign-out-alt" aria-hidden="true"></span>
                       Sign out
                     </a>
@@ -136,7 +136,7 @@
             {{#each @root.context.metaData.menus.main-not-signed-in ~}}
               <a href="{{stripTrailingSlash path}}" class="btn btn-link{{#if (regexMatch @root.request.url.pathname route 'gi')}} btn-active{{/if}}">{{label}}</a>
             {{/each}}
-            <a href="#" class="btn btn-link" data-component="TasksTrigger" data-TasksTrigger="sign-out">Sign out</a>
+            <a href="/sign-out" class="btn btn-link" data-component="TasksTrigger" data-TasksTrigger="sign-out">Sign out</a>
           {{/if ~}}
         {{else}}
           <a href="/" class="btn btn-link{{#if (regexMatch @root.request.url.pathname '^/$' 'gi')}} btn-active{{/if}}">Home</a>
