--- a/configuration/templates/account/auth/approval-required.hbs
+++ b/configuration/templates/account/auth/approval-required.hbs
@@ -28,14 +28,14 @@
   </p>
   <div class="empty-action">
     <a href="approval-email-send" class="btn btn-primary">Resend email</a>
-    {{#compare @root.data.accountInfo.user_type "===" "Volunteer" ~}}
+    {{#compare @root.data.accountInfo.user_type "Volunteer" ~}}
     <button onclick="revealForm()" class="btn btn-primary">Change email address</button>
     {{/compare ~}}
     <form id="user-details-form" style="display:none;" method="POST" action="submit-sign-up-details">
       Please enter the new email address below
       <input type="hidden" name="signup" value="true">
       {{#each (getKeys @root.data.accountInfo) ~}}
-        {{#compare this "===" "verification_email" ~}}
+        {{#compare this "verification_email" ~}}
         {{else}}
         <input type="hidden" name="{{this}}" value="{{getProperty @root.data.accountInfo this}}">
       {{/compare ~}}
