--- a/configuration/templates/account/auth/sign-out.hbs
+++ b/configuration/templates/account/auth/sign-out.hbs
@@ -1,4 +1,4 @@
-<form id="sign-out-form" method="POST" class="authentication-form container">
+<form id="sign-out-form" method="POST" class="container form authentication-form">
   <div class="form-group">
     <span class="form-icon loading"></span>
   </div>
