removed more crud from hours. Working on tasks error handler

--- a/configuration/templates/account/task.hbs
+++ b/configuration/templates/account/task.hbs
@@ -208,29 +208,29 @@
     submit: {
       preventDefault: true,
       tasks: [
-       {
+        {
           type: "elementManipulator",
           config: { ">": { addClass: "disabled" } }
-          },
-          {
-            name: "submitTaskRequest",
-            type: "request",
-            config: {
-              url: "/submit",
-              method: "POST",
-              dataType: "html",
-              data: {
-                __template: "\{{{json value=(parse (jquery null \"serialize\" context=metadata.instance.element) type=\"querystring\")}}}",
-                __parser: "json"
-              }
-          },
-          {
-            __doNotCompile: true,
-            name: "errorHandle",
-            type: "switch",
-            config: {
-              which: { __template: "\{{#ifAny errors.testRequest}}error\{{else}}\{{data.testRequest.errors.[0].taskName}}\{{/if}}"
-                },
+        },
+        {
+          name: "submitTaskRequest",
+          type: "request",
+          config: {
+            url: "/submit",
+            method: "POST",
+            dataType: "html",
+            data: {
+              __template: "\{{{json value=(parse (jquery null \"serialize\" context=metadata.instance.element) type=\"querystring\")}}}",
+              __parser: "json"
+            }
+          }
+        },
+        {
+          name: "errorHandle",
+          type: "switch",
+          __doNotCompile: true,
+          config: {
+            which: { __template: "\{{#if errors.testRequest}}error\{{else}}\{{data.testRequest.errors.[0].taskName}}\{{/if}}" },
             branches: {
               default: {
                 tasks: [
@@ -264,7 +264,6 @@
                   }
                 ]
               }
-
             }
           }
         }
