--- a/configuration/templates/account/sidebar.hbs
+++ b/configuration/templates/account/sidebar.hbs
@@ -9,7 +9,7 @@
   </h4>
   <ul class="menu">
     <li class="menu-item">
-      <a href="/" class="{{#compare @root.request.url.pathname '/'}} active{{/compare}}{{#if @root.data.accountInfo.verification_needed}} disabled{{/if}}">
+      <a href="/" class="l-padding-full {{#compare @root.request.url.pathname '/'}} active{{/compare}}{{#if @root.data.accountInfo.verification_needed}} disabled{{/if}}">
         <span class="far fa-fw fa-home" aria-hidden="true"></span>
         Home
       </a>
