--- a/configuration/templates/volunteering/search.hbs
+++ b/configuration/templates/volunteering/search.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container b-padding-full v-margin-full">
   {{> volunteering_search_form}}
   <div class="head">
     <div class="columns col-gapless">
