--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -113,7 +113,9 @@
                           <span class="far fa-fw fa-home" aria-hidden="true"></span>
                           Home
                         </a>
-                        <ul class="menu">
+                      </li>
+                      {{#each @root.context.metaData.menus.user-signed-in ~}}
+                        {{#if (contains user-types @root.data.accountInfo.user_type) ~}}
                           <li class="menu-item">
                             <a href="{{stripTrailingSlash path}}" class="l-padding-full {{#if (regexMatch @root.request.url.pathname route 'gi')}} active{{/if}}">
                               {{#if icon ~}}
