--- a/configuration/partials/log-empty.hbs
+++ b/configuration/partials/log-empty.hbs
@@ -2,8 +2,13 @@
   <div class="empty-icon">
     <span class="fal fa-user-clock fa-3x"></span>
   </div>
-  <p class="empty-title h5">You have not logged any volunteering hours yet</p>
-  <p class="empty-subtitle">Add your first volunteering task, or claim hours from an existing certificate.</p>
+  <p class="empty-title h5">You haven't logged any volunteering yet</p>
+  <p class="empty-subtitle">
+    The Saltire Awards gives you recognition for the volunteering you do.
+  </p>
+  <p class="empty-subtitle">
+    Add your first volunteering task to begin logging hours. You can also claim hours from an existing certificate to increase the hours on your Saltire account.
+  </p>
   <div class="empty-action">
     {{> log_action_buttons}}
   </div>
