--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -158,7 +158,7 @@
       <div class="{{#if layoutParts.sidebar}}sidebar-present{{else}}sidebar-not-present{{/if}}">
         {{#if layoutParts.sidebar ~}}
           <div class="columns col-gapless">
-            <aside class="column col-2 col-md-3 col-lg-3 col-xl-3 sidebar">
+            <aside class="column col-2 col-lg-3 col-xl-3 sidebar hide-md">
               {{{layoutParts.sidebar}}}
             </aside>
             <main class="column col-10 col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-9">
