--- a/src/main.scss
+++ b/src/main.scss
@@ -108,7 +108,7 @@ a.pure-menu-link:hover {
   }
 }
 @media screen and (max-width: 960px) {
-  .mobile-modal {
+  .mobile-menu {
     display: block;
 
     .mobile-menu_background {
@@ -122,7 +122,7 @@ a.pure-menu-link:hover {
       opacity: 0;
     }
 
-    aside.mobile-menu {
+    .mobile-menu_contents {
       position: fixed;
       background-color: #ffffff;
       height: 100vh;
@@ -137,7 +137,7 @@ a.pure-menu-link:hover {
         animation: fade-in 0.5s forwards;
       }
 
-      .mobile-menu {
+      .mobile-menu_contents {
         animation: slide-in 0.5s forwards;
       }
     }
@@ -147,7 +147,7 @@ a.pure-menu-link:hover {
         animation: fade-out 0.5 forwards;
       }
 
-      .mobile-menu {
+      .mobile-menu_contents {
         animation: slide-out 0.5s forwards;
       }
     }
