generic contact info

--- a/configuration/partials/account/details-form-fields.hbs
+++ b/configuration/partials/account/details-form-fields.hbs
@@ -38,7 +38,7 @@
             {{/each ~}}
           {{/with ~}}
         {{else}}
-          <a href="mailto:info@saltireawards.org.uk">contact us</a>.
+          <a href="mailto:{{@root.context.metaData.contacts.admin}}">contact us</a>.
         {{/if ~}}
       </div>
       {{/if ~}}
