--- a/configuration/templates/account/email/approval.hbs
+++ b/configuration/templates/account/email/approval.hbs
@@ -1,8 +1,8 @@
 {{#withExtend @root.data.accountInfo type=(if (compare @root.data.accountInfo.user_type "===" "Group Admin") "tsi-approval" else="parental-approval")}}
   [
   {
-  "from": "hello@saltireawards.org.uk",
-  "h:sender": "hello@saltireawards.org.uk",
+  "from": "{{@root.context.metaData.contacts.noreply}}",
+  "h:sender": "{{@root.context.metaData.contacts.noreply}}",
   {{#compare @root.data.accountInfo.user_type "===" "Group Admin"}}
   "to": "alex.nuttgens@scvo.org.uk",
   "wouldbe": "something",
