--- a/src/main.scss
+++ b/src/main.scss
@@ -227,7 +227,7 @@ header {
   //     color: black;
   //   }
   // }
-  .btn.btn-link.my-saltire {
+  .btn.btn-link.my-account {
     background: white !important;
     border-radius: 2rem;
     color: $primary-color !important;
