--- a/configuration/partials/log-empty.hbs
+++ b/configuration/partials/log-empty.hbs
@@ -4,10 +4,10 @@
   </div>
   <p class="empty-title h5">You haven't logged any volunteering yet</p>
   <p class="empty-subtitle">
-    The Saltire Awards gives you recognition for the volunteering you do.
+    The {{@root.context.metaData.title}} gives you recognition for the volunteering you do.
   </p>
   <p class="empty-subtitle">
-    Add your first volunteering task to begin logging hours. You can also claim hours from an existing certificate to increase the hours on your Saltire account.
+    Add your first volunteering task to begin logging hours. You can also claim hours from an existing certificate to increase the hours on your {{@root.context.metaData.accountName}} account.
   </p>
   <div class="empty-action">
     {{> log_action_buttons}}
