--- a/configuration/templates/account/email/welcome.hbs
+++ b/configuration/templates/account/email/welcome.hbs
@@ -2,8 +2,8 @@
   {{!-- Don't try to send if there is no email --}}
   {{#if @root.data.accountInfo.email}}
   {
-  "from": "hello@saltireawards.org.uk",
-  "h:sender": "hello@saltireawards.org.uk",
+  "from": "{{@root.context.metaData.contacts.noreply}}",
+  "h:sender": "{{@root.context.metaData.contacts.noreply}}",
   "to": "{{{@root.data.accountInfo.email}}}",
   "o:tag": "welcome",
   "o:tracking": true,
