Fixed mobile menu classname issue

--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -203,6 +203,46 @@
         }'></div>
         <aside class="mobile-menu_contents sidebar">
           {{{layoutParts.sidebar}}}
+          <ul class="menu">
+            <li class="menu-item">
+              <a href="/sign-out" class="l-padding-full" data-component="TasksTrigger" data-TasksTrigger="sign-out">
+                <span class="far fa-fw fa-sign-out-alt" aria-hidden="true"></span>
+                Sign out
+              </a>
+            </li>
+          </ul>
+          <hr/>
+          <div class="menu">
+            {{#if @root.data.auth ~}}
+              {{#if @root.data.accountInfo.user_type ~}}
+                {{#each @root.context.metaData.menus.main-signed-in ~}}
+                  <li class="menu-item">
+                    <a href="{{stripTrailingSlash path}}" class="{{#if (regexMatch @root.request.url.pathname route 'gi')}} active{{/if}}">{{label}}</a>
+                  </li>
+                {{/each}}
+                <li class="menu-item">
+                  <a href="/sign-out" data-component="TasksTrigger" data-TasksTrigger="sign-out">
+                    <span class="far fa-fw fa-sign-out-alt" aria-hidden="true"></span>
+                    Sign out
+                  </a>
+                </li>
+              {{else}}
+                <a href="/" class="btn btn-link{{#if (regexMatch @root.request.url.pathname '^/$' 'gi')}} btn-active{{/if}}">Home</a>
+                {{#each @root.context.metaData.menus.main-not-signed-in ~}}
+                  <a href="{{stripTrailingSlash path}}" class="btn btn-link{{#if (regexMatch @root.request.url.pathname route 'gi')}} btn-active{{/if}}">{{label}}</a>
+                {{/each}}
+                <a href="/sign-out" class="btn btn-link" data-component="TasksTrigger" data-TasksTrigger="sign-out">Sign out</a>
+              {{/if ~}}
+            {{else}}
+              <a href="/" class="btn btn-link{{#if (regexMatch @root.request.url.pathname '^/$' 'gi')}} btn-active{{/if}}">Home</a>
+              {{#each @root.context.metaData.menus.main-not-signed-in ~}}
+                <a href="{{stripTrailingSlash path}}" class="btn btn-link{{#if (regexMatch @root.request.url.pathname route 'gi')}} btn-active{{/if}}">{{label}}</a>
+              {{/each}}
+              {{#each @root.context.metaData.menus.user-not-signed-in ~}}
+                <a href="{{stripTrailingSlash path}}" class="btn btn-link{{#if (regexMatch @root.request.url.pathname route 'gi')}} btn-active{{/if}} my-saltire">{{label}}</a>
+              {{/each}}
+            {{/if ~}}
+          </div>
         </aside>
       </div>
 
