--- a/src/main.scss
+++ b/src/main.scss
@@ -103,7 +103,7 @@ a.pure-menu-link:hover {
 
 
 @media screen and (min-width: 961px) {
-  aside.mobile-menu {
+  .mobile-menu {
     display: none;
   }
 }
