--- a/src/main.scss
+++ b/src/main.scss
@@ -170,7 +170,10 @@ header {
   // box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
   // .navbar-brand {
   //   margin-left: $unit/2;
-  // }
+  // }]
+  .navbar-section:first-child {
+    flex: 0 0 auto;
+  }
   .dropdown-toggle,
   .dropdown .btn.btn-link,
   .dropdown .btn:focus,
